# graphrag_with_neo4j

./: .env.example  .gitignore  README.md  docker-compose.yml  processed_documents.pkl  pyproject.toml  requirements.txt  system_state.pkl
notebooks/: 01_setup_and_test.ipynb  02_document_processing.ipynb  03_graph_creation.ipynb  04_retrieval_testing.ipynb  05_complete_system.ipynb
src/: config.py  document_loader.py  graph_processor.py  retrieval_system.py
